# receiptparser

./: README.md  main.py  notes.md  pyproject.toml  requirements.txt  setup.py
receiptparser/: config.py  parser.py  receipt.py  util.py
