[project]
name = "receiptparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Eike Rogall", email = "eike.rogall@gmail.com"},
]
dependencies = [
    "Pillow",
    "pytesseract",
    "munch",
    "pyyaml",
    "python-dateutil",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
