[project]
name = "receiptparser"
version = "0.1.0"
description = ""
dependencies = [
    "Pillow",
    "pytesseract",
    "munch",
    "pyyaml",
    "python-dateutil",
]
requires-python = ">=3.11"
readme = "README.md"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
